added custom generated prompts. testing new prompts for compile ability. currently black is failing to compile