@@ -1,104 +1,82 @@
 package anagrams.gpt4o.white;
-import anagrams.*;
 
 import org.junit.jupiter.api.Test;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+import anagrams.Anagrams;
 
 import java.util.List;
+import java.util.Arrays;
+
+import static org.junit.jupiter.api.Assertions.*;
 
 public class AnagramsTest {
 
+    private final Anagrams anagrams = new Anagrams();
+
     @Test
-    public void testGroupAnagramsBasic() {
-        Anagrams anagrams = new Anagrams();
-        String[] input = {"eat", "tea", "tan", "ate", "nat", "bat"};
-        List<List<String>> expected = List.of(
-                List.of("eat", "tea", "ate"),
-                List.of("tan", "nat"),
-                List.of("bat")
+    public void testEmptyArray() {
+        String[] strs = {};
+        List<List<String>> result = anagrams.groupAnagrams(strs);
+        assertTrue(result.isEmpty());
+    }
+
+    @Test
+    public void testSingleWord() {
+        String[] strs = {"word"};
+        List<List<String>> result = anagrams.groupAnagrams(strs);
+        assertEquals(1, result.size());
+        assertEquals(Arrays.asList("word"), result.get(0));
+    }
+
+    @Test
+    public void testNoAnagrams() {
+        String[] strs = {"cat", "dog", "bird"};
+        List<List<String>> result = anagrams.groupAnagrams(strs);
+        assertEquals(3, result.size());
+    }
+
+    @Test
+    public void testAnagrams() {
+        String[] strs = {"bat", "tab", "eat", "tea", "tan", "nat"};
+        List<List<String>> result = anagrams.groupAnagrams(strs);
+        assertEquals(3, result.size());
+
+        result.forEach(group -> {
+            group.sort(String::compareTo); // Sort each group for easy comparison
+        });
+
+        List<List<String>> expected = Arrays.asList(
+            Arrays.asList("bat", "tab"),
+            Arrays.asList("eat", "tea"),
+            Arrays.asList("tan", "nat")
         );
-        
-        List<List<String>> result = anagrams.groupAnagrams(input);
-        
-        assertListOfListsEqualsIgnoreOrder(expected, result);
+
+        expected.forEach(group -> {
+            group.sort(String::compareTo); // Sort each group for easy comparison
+        });
+
+        assertTrue(result.containsAll(expected) && expected.containsAll(result));
     }
 
     @Test
-    public void testGroupAnagramsEmptyArray() {
-        Anagrams anagrams = new Anagrams();
-        String[] input = {};
-        List<List<String>> expected = List.of();
-        
-        List<List<String>> result = anagrams.groupAnagrams(input);
-        
-        assertListOfListsEqualsIgnoreOrder(expected, result);
-    }
+    public void testIdenticalWords() {
+        String[] strs = {"see", "see", "ese"};
+        List<List<String>> result = anagrams.groupAnagrams(strs);
+        assertEquals(2, result.size());
 
-    @Test
-    public void testGroupAnagramsSingleWord() {
-        Anagrams anagrams = new Anagrams();
-        String[] input = {"abc"};
-        List<List<String>> expected = List.of(
-                List.of("abc")
+        result.forEach(group -> {
+            group.sort(String::compareTo); // Sort each group for easy comparison
+        });
+
+        List<List<String>> expected = Arrays.asList(
+            Arrays.asList("see", "see"),
+            Arrays.asList("ese")
         );
-        
-        List<List<String>> result = anagrams.groupAnagrams(input);
-        
-        assertListOfListsEqualsIgnoreOrder(expected, result);
+
+        expected.forEach(group -> {
+            group.sort(String::compareTo); // Sort each group for easy comparison
+        });
+
+        assertTrue(result.containsAll(expected) && expected.containsAll(result));
     }
-
-    @Test
-    public void testGroupAnagramsNoAnagrams() {
-        Anagrams anagrams = new Anagrams();
-        String[] input = {"abc", "def", "ghi"};
-        List<List<String>> expected = List.of(
-                List.of("abc"),
-                List.of("def"),
-                List.of("ghi")
-        );
-        
-        List<List<String>> result = anagrams.groupAnagrams(input);
-        
-        assertListOfListsEqualsIgnoreOrder(expected, result);
-    }
-
-    @Test
-    public void testGroupAnagramsAllAnagrams() {
-        Anagrams anagrams = new Anagrams();
-        String[] input = {"aabb", "bbaa", "abab", "baba"};
-        List<List<String>> expected = List.of(
-                List.of("aabb", "bbaa", "abab", "baba")
-        );
-        
-        List<List<String>> result = anagrams.groupAnagrams(input);
-        
-        assertListOfListsEqualsIgnoreOrder(expected, result);
-    }
-
-    private void assertListOfListsEqualsIgnoreOrder(List<List<String>> expected, List<List<String>> actual) {
-        assertEquals(expected.size(), actual.size());
-
-        for (List<String> expectedList : expected) {
-            boolean matchFound = false;
-
-            for (List<String> actualList : actual) {
-                if (equalListsIgnoreOrder(expectedList, actualList)) {
-                    matchFound = true;
-                    break;
-                }
-            }
-            
-            if (!matchFound) {
-                throw new AssertionError("Expected: " + expected + ", but was: " + actual);
-            }
-        }
-    }
-
-    private boolean equalListsIgnoreOrder(List<String> list1, List<String> list2) {
-        if (list1.size() != list2.size()) {
-            return false;
-        }
-        
-        return list1.containsAll(list2) && list2.containsAll(list1);
-    }
+    
 }
